# pathtracer

./: CMakeLists.txt  a.exp  a.lib  bsdf.h  bsdf_alternative.h  camera.h  color.h  hello.cu  illumination.h  light.cpp  main.cu  materials.h  matrix.h  out.txt  ray.h  ray_test.cc  readme.md  shapes.h  shapes_unit.h  util.h  vec3.h  vec3_test.cc  vec_math.h
tests/: CMakeLists.txt  shape_test.cc  test_util.h  vec3_test.cc
